tidy up logging
git-svn-id: http://svn.vuze.com/public/client@26859 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2